# drf_blog

./: pyproject.toml  readme.md
VueDjAgency/api2/: serializers.py  urls.py  views.py
VueDjAgency/db/: db.sqlite3
VueDjAgency/mysite/: settings.py  urls.py
